Fix widget alignment on full-width pages

--- a/sass/content/_full-width.scss
+++ b/sass/content/_full-width.scss
@@ -25,5 +25,8 @@ body.page-template-full-width {
 		.widget {
 			@include three-up-block;
 		}
+		.widget + .widget {
+			margin-top: 0;
+		}
 	}
 }
